# rp2040-ili9341-infones

./: .gitmodules  README.md
software/: InfoNES_pAPU.cpp  InfoNES_pAPU.h  audio.c  audio.h  main.cpp
software/infones/: CMakeLists.txt  InfoNES.cpp  InfoNES.h  InfoNES_System.h  README.md  RomLister.cpp  audio.c  audio.h  font_8x8.h  main.cpp  menu.cpp
software/infones/drivers/sdcard/: sdcard.h
software/infones/mapper/: InfoNES_Mapper_019.cpp
